# CodexMeter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  codex_limits_demo.py  flash-mac.sh  install-mac.sh  logs.sh  pyproject.toml  screenshot.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml
codexmeter/: __init__.py  app_server.py  ble.py  cli.py  daemon.py  device_registry.py  events.py  limits.py  local_usage.py  multi_ble.py  payloads.py  persistence.py  provider.py  queueing.py  screen_policy.py  settings.py  supervision.py  transcripts.py
docs/: architecture.md  nothing-variants.md  theme-architecture.md  themes-games.md  themes-v6.md
firmware/: partitions_16mb_tinyttf.csv  platformio.ini
firmware/data/fonts/: README.md
firmware/data/themes/: README.md  animal_crossing_bg.rgb565
firmware/include/: config.h
firmware/src/: animal_crossing_theme.cpp  animal_crossing_theme.h  ble_service.cpp  ble_service.h  classic_theme.cpp  classic_theme.h  codexmeter_alert_28.c  codexmeter_font_30.c  codexmeter_montserrat_medium_ttf.inc  codexmeter_percent_64.c  cyberpunk_theme.cpp  cyberpunk_theme.h  dashboard_view_model.cpp  dashboard_view_model.h  device_log.cpp  device_log.h  device_settings.cpp  device_settings.h  display_rotation.cpp  display_rotation.h  famicom_theme.cpp  famicom_theme.h  identity.cpp  identity.h  imu.cpp  imu.h  main.cpp  model.cpp  model.h  power.cpp  power.h  theme.h  theme_registry.cpp  theme_registry.h  theme_rotation.cpp  theme_rotation.h  theme_runtime.cpp  theme_runtime.h  ui.cpp  ui.h
hooks/: codexmeter_notify.py  codexmeter_start_hook.py  codexmeter_stop_hook.py
scripts/: install_hook.py  install_notify.py
tests/: run_tests.py  test_ble.py  test_daemon.py  test_device_logs_tool.py  test_device_registry.py  test_events.py  test_hook.py  test_limits.py  test_local_usage.py  test_multi_ble.py  test_notify.py  test_payloads.py  test_provider.py  test_screen_policy.py  test_screenshot_tool.py  test_serial_device_tool.py  test_supervision.py  test_transcripts.py
tools/: capture_screenshot.py  read_device_logs.py  serial_device.py
