[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codexmeter"
version = "2.0.0"
description = "Mac daemon and ESP32 firmware bridge for Codex subscription limits."
requires-python = ">=3.11"
dependencies = [
  "bleak>=0.22.0",
]

[project.scripts]
codexmeterd = "codexmeter.daemon:main"
codexmeterctl = "codexmeter.cli:main"

[tool.setuptools.packages.find]
include = ["codexmeter*"]
