[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codexmeter"
dynamic = ["version"]
description = "Mac daemon and ESP32 firmware bridge for Codex subscription limits."
requires-python = ">=3.11"
dependencies = [
  "bleak==3.0.2",
]

[project.scripts]
codexmeterd = "codexmeter.daemon:main"
codexmeterctl = "codexmeter.cli:main"

[tool.setuptools.packages.find]
include = ["codexmeter*"]

[tool.setuptools.dynamic]
version = {attr = "codexmeter.__version__"}
