[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codexmeter"
dynamic = ["version"]
description = "Mac daemon and ESP32 firmware bridge for Codex subscription limits."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["codex", "esp32", "ble", "macos", "platformio"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "bleak==3.0.2",
]

[project.urls]
Homepage = "https://github.com/tomatoeggs/CodexMeter"
Repository = "https://github.com/tomatoeggs/CodexMeter.git"
Issues = "https://github.com/tomatoeggs/CodexMeter/issues"
Changelog = "https://github.com/tomatoeggs/CodexMeter/blob/main/CHANGELOG.md"

[project.scripts]
codexmeterd = "codexmeter.daemon:main"
codexmeterctl = "codexmeter.cli:main"

[tool.setuptools.packages.find]
include = ["codexmeter*"]

[tool.setuptools.dynamic]
version = {attr = "codexmeter.__version__"}
